force-app/main/default/objects/FormContent__c/FormContent__c.object-meta.xml
<CustomObject>
    <label>FormContent</label>
    <nameField>
        <label>FormContent Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FormsContent</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>