force-app/main/default/objects/FormContent__c/fields/email__c.field-meta.xml
<CustomField>
    <fullName>email__c</fullName>
    <label>email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>