force-app/main/default/objects/FormContent__c/fields/FormValue__c.field-meta.xml
<CustomField>
    <fullName>FormValue__c</fullName>
    <label>FormValue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>